force-app/main/default/objects/User/fields/Agr_AdvisorBackup__c.field-meta.xml
<CustomField>
    <fullName>Agr_AdvisorBackup__c</fullName>
    <label>Assessor Backup</label>
    <length>80</length>
    <type>Text</type>
</CustomField>