force-app/main/default/objects/User/fields/Agr_EmployeeArea__c.field-meta.xml
<CustomField>
    <fullName>Agr_EmployeeArea__c</fullName>
    <label>Área de atuação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negócios - AAI</fullName>
            </value>
            <value>
                <fullName>Analytcs &amp; BI</fullName>
            </value>
            <value>
                <fullName>Ativação</fullName>
            </value>
            <value>
                <fullName>Back-Office</fullName>
            </value>
            <value>
                <fullName>Trading - BM&amp;F</fullName>
            </value>
            <value>
                <fullName>Cadastro</fullName>
            </value>
            <value>
                <fullName>Negócios - Clubes</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Trading - Derivativos</fullName>
            </value>
            <value>
                <fullName>Educacional</fullName>
            </value>
            <value>
                <fullName>Negócios - Empresas</fullName>
            </value>
            <value>
                <fullName>Estratégia de Mercado</fullName>
            </value>
            <value>
                <fullName>Trading - Execução</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Fundos e Carteiras</fullName>
            </value>
            <value>
                <fullName>Gestão de Acessos</fullName>
            </value>
            <value>
                <fullName>Gestão de Resultados</fullName>
            </value>
            <value>
                <fullName>Negócios - Gestoras</fullName>
            </value>
            <value>
                <fullName>Prospect - Global</fullName>
            </value>
            <value>
                <fullName>Sales - Global</fullName>
            </value>
            <value>
                <fullName>Trading - Global</fullName>
            </value>
            <value>
                <fullName>Investimentos</fullName>
            </value>
            <value>
                <fullName>Trading - Mesa Termo &amp; BTC</fullName>
            </value>
            <value>
                <fullName>Prospect - Private</fullName>
            </value>
            <value>
                <fullName>Sales - Private</fullName>
            </value>
            <value>
                <fullName>Trading - Private</fullName>
            </value>
            <value>
                <fullName>Produtos Digitais</fullName>
            </value>
            <value>
                <fullName>Produtos Financeiros</fullName>
            </value>
            <value>
                <fullName>Qualidade &amp; Soluções</fullName>
            </value>
            <value>
                <fullName>Receptivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>