force-app/main/default/objects/User/fields/Agr_InactivationReason__c.field-meta.xml
<CustomField>
    <fullName>Agr_InactivationReason__c</fullName>
    <description>Motivo da inativação do usuário</description>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desligamento</fullName>
            </value>
            <value>
                <fullName>Mudança de área</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>