force-app/main/default/objects/User/fields/Agr_InactivationReasonDescription__c.field-meta.xml
<CustomField>
    <fullName>Agr_InactivationReasonDescription__c</fullName>
    <description>Descrição do motivo da inativação do usuário.</description>
    <label>Descrição do Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>