force-app/main/default/objects/User/fields/Agr_SourceSystemId__c.field-meta.xml
<CustomField>
    <fullName>Agr_SourceSystemId__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <externalId>true</externalId>
    <label>Código funcional do funcionário Ágora</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>