force-app/main/default/objects/User/validationRules/Agr_short_inactivation_reason_desc.validationRule-meta.xml
<ValidationRule>
    <fullName>Agr_short_inactivation_reason_desc</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
IsActive = FALSE,
ISPICKVAL( Agr_InactivationReason__c , &apos;Outros&apos;),
LEN( Agr_InactivationReasonDescription__c ) &lt; 5
)</errorConditionFormula>
    <errorDisplayField>Agr_InactivationReasonDescription__c</errorDisplayField>
    <errorMessage>Descrição do Motivo insuficiente</errorMessage>
</ValidationRule>